syntax="proto3";

package session_service;

option go_package = "github.com/Abelova-Grupa/Mercypher/proto/sessionpb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";


message ConnectRequest {
    string username = 1;
}

message DisconnectRequest {
    string username = 1;
}

message Session {
    string ID = 1;
    string Username = 2;
    bool IsActive = 3;
    google.protobuf.Timestamp ConnectedAt = 4;
    google.protobuf.Timestamp LastSeenTime = 5;
}



service SessionService {
    rpc Connect(ConnectRequest) returns (google.protobuf.Empty) {}
    rpc Disconnect(DisconnectRequest) returns (google.protobuf.Empty) {}
}